# lfx-tac-actions

./: .coveragerc  .gitignore  README.md  SECURITY.md  action.yml  pyproject.toml  sonar-project.properties  updateclomonitor.py  updateprojects.py  updatetacagendaitems.py
.github/workflows/: test.yml  update-release-version.yml
lfx_tac_actions/: updatecharters.py  updateclomonitor.py  updatedecks.py  updateprojects.py  updatetacagendaitems.py  updatetacmembers.py
test/: test_clomonitor_parser.py  test_updatecharters.py  test_updateclomonitor.py  test_updatedecks.py  test_updateprojects.py  test_updatetacagendaitems.py  test_updatetacmembers.py
